fix 1px overlap

--- a/stylesheets/buffer-find-and-replace.less
+++ b/stylesheets/buffer-find-and-replace.less
@@ -23,7 +23,7 @@
   box-sizing: content-box;
 
   padding: 0 0px;
-  margin: 0 0 0 -1px;
+  margin: -1px 0 0 -1px;
 }
 
 .buffer-find-and-replace {
